# crispr_screen_viewer

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  compose.yaml  pyproject.toml  requirements.txt  setup.py
crispr_screen_viewer/: basic_launcher.py  clustergram.py  comparison_comparer.py  comparison_maker.py  create_db.py  database.py  dataset.py  functions_etc.py  launch.py  launch_msgv.py  launch_screen_explorer.py  launch_viewers.py  legal.py  multiscreen_gene_viewer.py  proteomics_biplots.py  scatter.py  screen_explorer.py  selector_tables.py  shared_components.py  util.py  volcano.py
crispr_screen_viewer/assets/: 10_chriddyp_bWLwgP.css  20_custom.css  custom.css
data/: drz_fdr.csv  drz_neg_p.csv  drz_pos_p.csv  drz_score.csv  mag_neg_p.csv
launch_scripts/: launch_jacks_scatter.py  launch_volcano.py
src/crispr_screen_viewer/: __init__.py  cli.py  comparison_maker.py  create_db.py  database.py  dataset.py  functions_etc.py  launch.py  multiscreen_gene_viewer.py  populate_database.py  screen_explorer.py  selector_tables.py  shared_components.py  update_database.py  update_gene_table.py
src/crispr_screen_viewer/assets/: 20_custom.css
src/crispr_screen_viewer/assets/images/: DDRCS_LOGO.tiff
src/crispr_screen_viewer/data/: comparisons_metadata.csv  experiments_metadata.csv  mag_fdr.csv  mag_pos_p.csv  mag_score.csv
src/crispr_screen_viewer/data/test_db/: database.db
src/crispr_screen_viewer/tests/: test_live.py  test_update_database.py  utilities.py  utils.py
src/crispr_screen_viewer/tests/test_data/branched_style/test1/re/cts/: test1.counts.tsv
src/crispr_screen_viewer/tests/test_data/branched_style/test1/re/res/tables/: result.drugz_table.csv
src/crispr_screen_viewer/tests/test_data/exorcise_style/test1/re/det/: test1.xlsx
src/crispr_screen_viewer/tests/test_data/exorcise_style/test1/re/res/: resultlog_2024-2-22_15h44m37s.3.txt
src/crispr_screen_viewer/tests/test_data/exorcise_style/test1/re/res/tables/: result.mageck_table.csv
src/crispr_screen_viewer/tests/test_data/flat_style/details/: test1.xlsx  test2.xlsx
src/crispr_screen_viewer/tests/test_data/flat_style/results/: test1.xlsx
src/crispr_screen_viewer/tests/test_data/flat_style/results/test1/drugz/files/: result.CTRL-TREAT.tsv
src/crispr_screen_viewer/tests/test_data/flat_style/results/test2/tables/: result.drugz_table.csv
src/crispr_screen_viewer/tests/test_data/test_db/: database.db
(+47 files in other folders)
