[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crispr_screen_viewer"
dynamic = ["dependencies"]
version = "0.10.0"
authors = [
  { name='John C. Thomas', email="jcthomas000@gmail.com" },
]
description = "View and query the results of CRISPR screens."

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
launch-crsv = "crispr_screen_viewer:launch.from_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crispr_screen_viewer = ["tests/*", "assets/*", "assets/images/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}